--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+prompt = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-brain-games = 'brain_games.scripts.brain_games:main'
+brain-games = "brain_games.scripts.brain_games:main"
